Fix for Bug #21131: fopen($file, 'a+') would incorrectly assume that the stream position was at offset 0. This corrects that assumption by querying the stream for it's position when it detects the 'a' "flag" in the mode parameter to fopen. Also added a test for plain files and amended the userstreams test to take this into account.